updates with current next arrival and minutes away on page refresh

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <th><b>Frequency (min)</b></th>
                     <th><b>Next Arrival</b></th>
                     <th><b>Minutes Away</b></th>
+                    <th><b>First Train</b></th>
                 </tr>
                 <!-- placeholder row -->
                 <!-- <tr>
@@ -71,6 +72,12 @@
             </div>
         </div>
     </div>
+
+    <!-- <div id = "experimentalButton">
+        <button type="submit" class="btn btn-default" id="updateButton">Update</button>
+    </div> -->
+
+    <div id = firstTrainTimes> </div>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
