hid 'first train' column

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <th><b>Frequency (min)</b></th>
                     <th><b>Next Arrival</b></th>
                     <th><b>Minutes Away</b></th>
-                    <th><b>First Train</b></th>
+                    <th id = "train1"><b>First Train</b></th>
                 </tr>
                 <!-- placeholder row -->
                 <!-- <tr>
