--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- <div id = "experimentalButton">
         <button type="submit" class="btn btn-default" id="updateButton">Update</button>
     </div> -->
-    <div id=f irstTrainTimes> </div>
+    <!-- <div id=firstTrainTimes> </div> -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
